Mouse not interacting with tab bar of non-maximized window at the top edge of the screen
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox111 | --- | wontfix |
| firefox112 | --- | verified |
| firefox113 | --- | verified |
People
(Reporter: julien.falque, Assigned: emilio)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(3 files)
|
199.28 KB,
video/webm
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
diannaS
:
approval-mozilla-beta+
|
Details | Review |
|
6.24 MB,
video/webm
|
Details |
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:109.0) Gecko/20100101 Firefox/111.0
Steps to reproduce:
I reproduce this on Gnome desktop (Wayland), at least on an up-to-date Arch Linux and Ubuntu 22.10.
- Move a non-maximized Firefox window to the top edge of the screen
- Try to interact with the tab bar (e.g. closing a tab with middle click, or left click on the new tab button) while having the mouse pointer at the very top of the screen
Actual results:
The mouse actually interacts with the edge of the window, i.e. it starts to resize it.
If you right click there, the resizing will continue even if you release the mouse button. You need to left click to stop the resizing.
Expected results:
The mouse should have interacted with the tab bar (pre-v111 behavior).
Comment 1•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Not Wayland-specific and seems to be intentional, however the native titlebar and other native apps on Ubuntu 22.10 do not have this behavior.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=9c484601dceb9159cb363f2bc0d52e313bc33f1e&tochange=08b6af27b2ea004809b29b47c2df0ce7eb6f6397
Regressed by Bug 1813554.
Comment 3•2 years ago
|
||
:emilio, since you are the author of the regressor, bug 1813554, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 4•2 years ago
|
||
It doesn't match the native GNOME behavior, so keep it in that DE only.
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 6•2 years ago
|
||
| bugherder | ||
Comment 7•2 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox112towontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 8•2 years ago
|
||
Comment on attachment 9325136 [details]
Bug 1822764 - Only do the extra resizer pixel on KDE. r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: comment 0
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Reverts behavior to pre-111 behavior.
- String changes made/needed: none
- Is Android affected?: No
| Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 9•2 years ago
|
||
Comment on attachment 9325136 [details]
Bug 1822764 - Only do the extra resizer pixel on KDE. r=stransky
Approved for 112.0b9
Comment 10•2 years ago
|
||
| bugherder uplift | ||
Comment 11•2 years ago
|
||
I wasn't able to reproduce this issue in the KDE environment using Nightly 113.0a1(15-03-2023) on Ubuntu 22.04 following the STR from Comment 0.
@Julien Falque, could you please let us know if the issue can still be reproduced in the latest Nightly 113.0a1 and Firefox 112.0 versions?
While checking this issue in the Gnome environment, I've reproduced it using Nightly 113.0a1(15-03-2023) on Ubuntu 22.04.
@Emilio, I've noticed that in the latest Nightly 113.0a1 it's no longer possible to resize the browser window by dragging. Please see the attachment. Should I file a separate bug for this?
| Assignee | ||
Comment 12•2 years ago
|
||
Yeah, kde shouldn't have changed behavior with this patch, and the gnome thing is intentional as per comment 0
| Reporter | ||
Comment 13•2 years ago
|
||
I confirm I can't reproduce the issue on Arch Linux with Firefox 112.0rc2-1.
Comment 14•2 years ago
|
||
Thank you for confirming.
Marking this as VERIFIED FIXED.
Description
•