Bug 1822764 - Only do the extra resizer pixel on KDE. r=stransky

It doesn't match the native GNOME behavior, so keep it in that DE only.

Differential Revision: https://phabricator.services.mozilla.com/D173676